--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>PURPLE</title>
+    <title>Form Purple Login</title>
   </head>
   <body>
     <div class="container">
